--- a/app-movil/package.json
+++ b/app-movil/package.json
@@ -8,7 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "dev": "expo-router/dev",
+    "routes": "expo-router routes"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -24,7 +26,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
+    "expo-local-authentication": "~16.0.4",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -45,6 +47,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-router": "^5.1.0",
     "typescript": "~5.8.3"
   },
   "private": true
