--- a/app-movil/tsconfig.json
+++ b/app-movil/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "paths": {
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "paths": { 
       "@/*": [
         "./*"
       ]
