--- a/app-movil/package.json
+++ b/app-movil/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "dotenv": "^16.5.0",
     "expo": "~53.0.11",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-camera": "^16.1.8",
     "expo-constants": "~17.1.6",
@@ -32,6 +34,8 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
+    "express": "^5.1.0",
+    "mongodb": "^6.17.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -44,10 +48,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/express": "^5.0.3",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^24.0.1",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "expo-router": "^5.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3"
   },
   "private": true
