--- a/app-movil/api/.env
+++ b/app-movil/api/.env
@@ -1,1 +1,1 @@
-MONGODB_URI= mongodb+srv://azulichis:<Apb_9205>@hacks.ln1btb2.mongodb.net/?retryWrites=true&w=majority&appName=Hacks
+MONGODB_URI=mongodb+srv://azulichis:azulichis123@hacks.ln1btb2.mongodb.net/?retryWrites=true&w=majority&appName=Hacks
