--- a/app-movil/.gitignore
+++ b/app-movil/.gitignore
@@ -31,11 +31,9 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
 .env
-.env.local
-.env.development
-.env.production
+**/.env
+*.env
 
 # typescript
 *.tsbuildinfo
